2003-01-06 Roger Hardiman <roger@freebsd.org>

	* configure.in: Add BSD IPv6 check and make correction to --help
	
2003-01-06 Damien Sandras  <dsandras@seconix.com>

	* src/sound_handling.cpp: Removed SET_MODAL.
	
2003-01-06 Damien Sandras  <dsandras@seconix.com>

        * src/endpoint.cpp: Fixed missing SetSoundChannelPlayer thanks
	to Johnny.

	* src/sound_handling.cpp: Display the dialog when the thread is created
	then change the label to show the progress.

	* src/sound_handling.h: New private vars.

	* src/videograbber.cpp: ?
	
2003-01-05 Damien Sandras  <dsandras@seconix.com>

	* src/sound_handling.cpp: Moved mutexes.
	
2003-01-05 Damien Sandras  <dsandras@seconix.com>

	* src/sound_handling.cpp: Added missing gtk_widget_show.
	
2003-01-05 Damien Sandras  <dsandras@seconix.com>

	* src/druid.cpp: Reorganised the video test section.

	* src/main_window.cpp: Added idle timer to refresh the GUI.

	* src/sound_handling.cpp: Moved gdk_threads_enter to prevent crash.

	* src/videograbber.cpp: Same here.

2003-01-05 Damien Sandras  <dsandras@seconix.com>

	* gnomemeeting.schemas.in.in: Fixed default for fast start.

	* lib/dialog.c: Added GTK_DESTROY_WITH_PARENT for dialogs.

	* src/config.cpp: Fixed View menus updates.

	* src/endpoint.cpp: Reorganised some code.

	* src/main_window.cpp: Reorganised startup sequence.

	* src/misc.cpp: Fixed gnomemeeting_log_insert. An unuseful
	mark was created there.

	* src/tools.cpp: Creates the mark when building the window.

2003-01-05 Damien Sandras  <dsandras@seconix.com>

	* src/ldap_window.cpp: Selects the first server on startup.

	* src/pref_window.cpp: Made the personal data entries larger.
	
2003-01-04 Damien Sandras  <dsandras@seconix.com>

	* src/main_window.cpp, src/gnomemeeting.cpp: Changed timeouts values.
	
2003-01-04 Damien Sandras  <dsandras@seconix.com>

	* src/main_window.cpp: Fixed startup sequence so that the
	GUI is created before the endpoint.
	
2003-01-04 Damien Sandras  <dsandras@seconix.com>
