@@ -57,7 +57,7 @@ static void dialog_response_cb (GtkWidget *, gint, gpointer);
 extern GtkWidget *gm;
 
 
-/* Callbacks */
+/* The GTK callbacks */
 void dialog_response_cb (GtkWidget *w, gint, gpointer data)
 {
   GmDruidWindow *dw = NULL;
@@ -307,29 +307,6 @@ GMAudioTester::GMAudioTester (GMH323EndPoint *e)
   player = new PSoundChannel;
   recorder = new PSoundChannel;
 
-  dialog =
-    gtk_dialog_new_with_buttons ("Audio test running...",
-				 GTK_WINDOW (gw->druid_window),
-				 (enum GtkDialogFlags) (GTK_DIALOG_DESTROY_WITH_PARENT),
-				 GTK_STOCK_OK,
-				 GTK_RESPONSE_ACCEPT,
-				 NULL);
-  msg = g_strdup_printf (_("GnomeMeeting is now recording from %s and playing back to %s. Please say \"1 2 3\" in your microphone, you should hear yourself back into the speakers in 5 seconds.\n\nRecording... Please talk."), (const char*) ep->GetSoundChannelRecordDevice (), (const char*) ep->GetSoundChannelPlayDevice ());
-  label = gtk_label_new (msg);
-  gtk_label_set_line_wrap (GTK_LABEL (label), true);
-  g_free (msg);
-	
-  gtk_box_pack_start (GTK_BOX (GTK_DIALOG (dialog)->vbox), label,
-		      FALSE, FALSE, 0);
-	
-  g_signal_connect (G_OBJECT (dialog), "response",
-		    G_CALLBACK (dialog_response_cb), NULL);
-  gtk_dialog_set_response_sensitive (GTK_DIALOG (dialog),
-				     GTK_RESPONSE_ACCEPT, false);
-  gtk_window_set_transient_for (GTK_WINDOW (dialog),
-				GTK_WINDOW (gw->druid_window));
-
-  gtk_widget_show_all (dialog);
 
   this->Resume ();
 }
@@ -354,6 +331,12 @@ GMAudioTester::~GMAudioTester ()
 void GMAudioTester::Main ()
 {
   GConfClient *client = NULL;
+  GmDruidWindow *dw = NULL;
+  
+  GtkWidget *dialog = NULL;
+  GtkWidget *label = NULL;
+
+  gchar *msg = NULL;
 
   char *buffer_play = (char *) malloc (8 * 1024);
   char *buffer_record = (char *) malloc (8 * 1024);
@@ -365,7 +348,8 @@ void GMAudioTester::Main ()
   int clock = 0;
 
   bool label_displayed = false;
-
+  bool displayed = false;
+  
   PTime now;
   
   client = gconf_client_get_default ();
@@ -426,6 +410,38 @@ void GMAudioTester::Main ()
       stop = TRUE;
     }
 
+
+    if (!displayed) {
+
+      gdk_threads_enter ();
+      dialog =
+	gtk_dialog_new_with_buttons ("Audio test running...",
+				     GTK_WINDOW (gw->druid_window),
+				     (enum GtkDialogFlags) (GTK_DIALOG_DESTROY_WITH_PARENT),
+				     GTK_STOCK_OK,
+				     GTK_RESPONSE_ACCEPT,
+				     NULL);
+      msg = g_strdup_printf (_("GnomeMeeting is now recording from %s and playing back to %s. Please say \"1 2 3\" in your microphone, you should hear yourself back into the speakers in 5 seconds.\n\nRecording... Please talk."), (const char*) ep->GetSoundChannelRecordDevice (), (const char*) ep->GetSoundChannelPlayDevice ());
+      label = gtk_label_new (msg);
+      gtk_label_set_line_wrap (GTK_LABEL (label), true);
+      g_free (msg);
+	
+      gtk_box_pack_start (GTK_BOX (GTK_DIALOG (dialog)->vbox), label,
+			  FALSE, FALSE, 0);
+	
+      g_signal_connect (G_OBJECT (dialog), "response",
+			G_CALLBACK (dialog_response_cb), NULL);
+      gtk_dialog_set_response_sensitive (GTK_DIALOG (dialog),
+					 GTK_RESPONSE_ACCEPT, false);
+      gtk_window_set_transient_for (GTK_WINDOW (dialog),
+				    GTK_WINDOW (gw->druid_window));
+
+      gtk_widget_show_all (dialog);
+      gdk_threads_leave ();
+      
+      displayed = true;
+    }
+    
     
     if (clock >= 5) {
       
@@ -455,13 +471,12 @@ void GMAudioTester::Main ()
     clock = (PTime () - now).GetSeconds ();
   }
 
-  if (stop) {
-    
-    gdk_threads_enter ();
-    gtk_dialog_set_response_sensitive (GTK_DIALOG (dialog),
-				       GTK_RESPONSE_ACCEPT, true);
-    gdk_threads_leave ();
-  }
+  gnomemeeting_threads_enter ();
+  dw = gnomemeeting_get_druid_window (gm);
+  gtk_toggle_button_set_active (GTK_TOGGLE_BUTTON (dw->audio_test_button),
+				FALSE);
+  gtk_widget_queue_draw (dw->audio_test_button);
+  gnomemeeting_threads_leave ();
   
   free (buffer_ring);
   free (buffer_record);
