@@ -130,10 +130,6 @@ protected:
   PSoundChannel *recorder;
 
   GmWindow *gw;
-  GtkWidget *dialog;
-  GtkWidget *label;
-
-  gchar *msg;
 
   GMH323EndPoint *ep;
 };
