@@ -1,3 +1,10 @@
+2003-01-06 Damien Sandras  <dsandras@seconix.com>
+
+	* src/ils.cpp: Fixed bug: removed unneeded gnomemeeting_threads_enter.
+
+	* src/sound_handling.cpp, sound_handling.h: Only display the dialog
+	if the test is running.
+	
 2003-01-06 Roger Hardiman <roger@freebsd.org>
 
 	* configure.in: Add BSD IPv6 check and make correction to --help
